[package]
name = "hello_cargo"
version = "0.1.4"
authors = ["yanchongwen <yanchongwen101@163.com>"]
description = "Rust language ."
license = "MIT/Apache-2.0"
repository = "https://github.com/hanshou101/Rust_HelloWorld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.39"
bigdecimal = "0.1.2"